--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -43,7 +43,7 @@
     <string name="renaming_folder">Aplankas pervadinamas</string>
     <string name="filename_cannot_be_empty">Failo pavadinimas negali bûti paliktas tusèias</string>
     <string name="filename_invalid_characters">Failo varde yra negalimø simboliø</string>
-    <string name="filename_invalid_characters_placeholder">Filename %s contains invalid characters</string>
+    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
     <string name="extension_cannot_be_empty">Papildinys negali bûti paliktas tuðèias</string>
     <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
 
