--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -252,6 +252,7 @@
     <string name="keep_last_modified">Ponechať starú hodnotu naposledy-upravené pri kopírovaní/presúvaní/premenúvaní súborov</string>
     <string name="show_info_bubble">Zobraziť informačnú bublinu pri prehliadaní položiek ťahaním posuvníka</string>
     <string name="prevent_phone_from_sleeping">Zabrániť uspaniu zariadenia</string>
+    <string name="skip_delete_confirmation">Stále preskočiť potvrdenie vymazania súborov</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditeľnosť</string>
