--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -253,6 +253,7 @@
     <string name="show_info_bubble">Zobraziť informačnú bublinu pri prehliadaní položiek ťahaním posuvníka</string>
     <string name="prevent_phone_from_sleeping">Zabrániť uspaniu zariadenia</string>
     <string name="skip_delete_confirmation">Stále preskočiť potvrdenie vymazania súborov</string>
+    <string name="enable_pull_to_refresh">Povoliť obnovenie súborov potiahnutím zhora</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditeľnosť</string>
