--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -41,9 +41,9 @@
     <string name="rename_folder_root">No se puede cambiar el nombre de la carpeta raíz del almacenamiento</string>
     <string name="rename_folder_ok">Carpeta renombrada correctamente</string>
     <string name="renaming_folder">Renombrando carpeta</string>
-    <string name="filename_cannot_be_empty">El nombre de archivo no puede estar vacío</string>
-    <string name="filename_invalid_characters">El nombre archivo contiene caracteres no válidos</string>
-    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
+    <string name="filename_cannot_be_empty">El nombre del archivo no puede estar vacío</string>
+    <string name="filename_invalid_characters">El nombre del archivo contiene caracteres no válidos</string>
+    <string name="filename_invalid_characters_placeholder">El nombre del archivo \'%s\' contiene caracteres no válidos</string>
     <string name="extension_cannot_be_empty">La extensión no puede estar vacía</string>
     <string name="source_file_doesnt_exist">El archivo %s no existe</string>
 
@@ -247,8 +247,8 @@
     <string name="keep_last_modified">Mantener el valor de ultima modificación al copiar/mover/renombrar los archivos</string>
     <string name="show_info_bubble">Mostrar una burbuja de información al desplazar elementos arrastrando la barra de desplazamiento</string>
     <string name="prevent_phone_from_sleeping">Evitar que el teléfono duerma</string>
-    <string name="skip_delete_confirmation">Always skip delete confirmation dialog</string>
-    <string name="enable_pull_to_refresh">Enable pull-to-refresh from the top</string>
+    <string name="skip_delete_confirmation">Omitir siempre el diálogo de confirmación de eliminación</string>
+    <string name="enable_pull_to_refresh">Habilitar tirar desde la parte superior para refrescar</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidad</string>
