--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -248,14 +248,14 @@
     <string name="keep_last_modified">파일 복사/이동/변경 시 최종 수정시간 정보를 유지</string>
     <string name="show_info_bubble">스크롤바 드래그 시 항목별 툴팁 활성화</string>
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping</string>
-    <string name="skip_delete_confirmation">Always skip delete confirmation dialog</string>
-    <string name="enable_pull_to_refresh">Enable pull-to-refresh from the top</string>
+    <string name="skip_delete_confirmation">삭제 확인 다이얼로그 비활성화</string>
+    <string name="enable_pull_to_refresh">상하단 스와이프 동작으로 새로고침</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Visibility</string>
-    <string name="security">Security</string>
-    <string name="scrolling">Scrolling</string>
-    <string name="file_operations">File operations</string>
+    <string name="visibility">가시성</string>
+    <string name="security">보안</string>
+    <string name="scrolling">스크롤링</string>
+    <string name="file_operations">파일 작업</string>
 
     <!-- Import / Export -->
     <string name="importing">가져오는 중…</string>
